fix: Presentations spacing and styling misc

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -61,7 +61,8 @@
 
 .experiences-section,
 .pictures-section,
-.contacts-section {
+.contacts-section,
+.presentations-section {
   padding-bottom: 150px;
   padding-top: 150px;
 }
@@ -92,7 +93,7 @@
 }
 
 .resources-top-padding {
-  padding-top: 150px;
+  padding-top: 50px;
 }
 
 .resources-presentation-header-name {
